test/resources/typer/failing/ExtCallError1.scala
object CallError {
  // Different function types!
  (if (true) { Std.printString } else { Std.intToString })(1)
}
